# touch-typing

./: .clang-format  .clang-tidy  .cmake-format  .gitmessage  .iwyu  .travis.yml  CMakeLists.txt  Dangerfile  Dockerfile  README.md  commitlint.config.js
cmake/: FindSphinx.cmake  ccache.cmake  clang-format.cmake  clang-tidy.cmake  cmake-format.cmake  cppcheck.cmake  flags.cmake  google_test.cmake  google_test_download.cmake.in  iwyu.cmake  kcov.cmake  modules.cmake  options.cmake  packages.cmake  sanitizers.cmake
data/: 0001-text.txt  CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in  conf.py  conf.py.in  index.rst
src/: Account.cpp  Account.hpp  Accounts.hpp  BinaryStorage.hpp  CMakeLists.txt  Controller.cpp  Controller.cppm  Controller.hpp  CursesPresenter.cpp  CursesPresenter.cppm  CursesPresenter.hpp  Error.hpp  Input.hpp  Interactor.cpp  Interactor.cppm  Interactor.hpp  Output.cppm  Output.hpp  OutputResult.cppm  OutputResult.hpp  StandardInput.cpp  StandardInput.hpp  StandardInteractor.cpp  StandardInteractor.hpp  StandardOutput.cpp  StandardOutput.hpp  StandardPresenter.cpp  StandardPresenter.hpp  StandartInput.cpp  StandartInput.hpp  StandartOutput.cpp  StandartOutput.hpp  TextFile.cpp  TextFile.cppm  TextFile.hpp  TextStorage.cpp  TextStorage.cppm  TextStorage.hpp  TouchTyping.cpp  TouchTypingMain.cpp  (+3 more)
tests/: AccountsTests.cpp  BinaryStorageTests.cpp  CMakeLists.txt  TempFile.cpp  TempFile.hpp  TextFileTests.cpp  TouchTypingTests.cpp  touch_typing_tests.cpp
